--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+  <meta name="description" content="phone-bar by Zia Rizvi, Please visit phone-bar">
+  <meta name="author" content="Zia Rizvi">
+	
     <title>Index</title>
     <style>
         body {
