--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <a href="tel:+441517086267" style="margin-top:-40px">Call us at 0151-7086267</a><br>
             <a href="mailto:Phonebar142@gmail.com" style="margin-top:-10px">Phonebar142@gmail.com</a><br>
             <hr style="color:#FFC; margin-top:-10px">
-            <p style="color:#FFC"><u><a href="https://www.google.com/maps/place/Your+Location+Address" target="St Johns Market St Johns Precinct, 142 Charlotte Way, Liverpool L1 1NA, United Kingdom">View on Google Maps<br>Address: 142 Charlotte Way,&nbsp; St.John Precinct, Liverpool, L1 1NA</a></u></p>
+            <p style="color:#FFC"><u><a href="https://www.google.com/maps/place/Your+Location+Address" target="St Johns Market St Johns Precinct, 142 Charlotte Way, Liverpool L1 1NA, United Kingdom">View on Google Maps<br><br>Address: 142 Charlotte Way,&nbsp; St.John Precinct, Liverpool, L1 1NA</a></u></p>
         </div></div>
         
        
