--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         }
 
         .image-box, .content-box {
-            background-color: #000;
+            background-color: #FFC;
             padding: 20px;
             border: 10px double #900;
             border-radius: 15px;
